--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<title>ObjectJS</title>
 	</head>
 	<body>
-		<a href="/docs/">Documentation for v 0.8</a>
+		<a href="/ObjectJS/docs/">Documentation for v 0.8</a>
 	</body>
 </html>
