--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 		<title>ObjectJS</title>
 	</head>
 	<body>
-		<a href="/ObjectJS/docs/">Documentation for v 0.8</a>
+		<pre>
+  ___  _     _           _      _ ____  
+ / _ \| |__ (_) ___  ___| |_   | / ___| 
+| | | | '_ \| |/ _ \/ __| __|  | \___ \ 
+| |_| | |_) | |  __/ (__| || |_| |___) |
+ \___/|_.__// |\___|\___|\__\___/|____/ 
+          |__/                          
+</pre>
+		<a href="/ObjectJS/docs/">Latest documentation</a>
 	</body>
 </html>
