--- a/examples/helloworld/objectjs-helloworld.html
+++ b/examples/helloworld/objectjs-helloworld.html
@@ -29,13 +29,23 @@
 		</style>
 	</head>
 	<body>
-		<div id="HelloWorld">
-			<h2>hello world</h2>
-			<a href="#" class="close">close</a>
-			<a href="#" class="tst">testjson</a>
-			<script class="template" type="html/template">
-				TEML
-			</script>
+		<div id="root">
+			<div id="HelloWorld">
+				<h2>hello world</h2>
+				<a href="#" class="close">close</a>
+				<a href="#" class="tst">testjson</a>
+				<script class="template" type="html/template">
+					TEML
+				</script>
+			</div>
+			<div id="HelloWorld2">
+				<h2>hello world</h2>
+				<a href="#" class="close">close</a>
+				<a href="#" class="tst">testjson</a>
+				<script class="template" type="html/template">
+					TEML
+				</script>
+			</div>
 		</div>
 		<script src="../../src/ObjectJS.js"></script>
 		<script type="text/javascript">
@@ -87,13 +97,14 @@
 						View.requires(
 							ns.uis,
 							[
-								'HelloWorld'
+								'HelloWorld',
+								'HelloWorld2'
 							],
 							View
 						);
 						if (runonce) {
 							// Things you only need to run once.
-							ObjectJS.core.uis.BaseUI.setRootDomNode('body');
+							ObjectJS.core.uis.BaseUI.setRootDomNode('#root');
 						}
 
 						View.uis.HelloWorld.open();
@@ -110,7 +121,17 @@
 					
 					init();
 				};
+				ns.uis.HelloWorld2 = function (view) {
+					var HelloWorld = this,
+						init = function () {
+							HelloWorld.setupUI('#HelloWorld2');
+						};
+					HelloWorld.view = view;
+					
+					init();
+				};
 				ObjectJS.core.uis.BaseUI.createUI(ns.uis.HelloWorld);
+				ObjectJS.core.uis.BaseUI.createUI(ns.uis.HelloWorld2);
 				ObjectJS.core.views.BaseView.createView(ns.View);
 				ObjectJS.core.controllers.BaseController.createController(ns.Controller);
 				ns.Controller = new ns.Controller();
