--- a/examples/helloworld/test.html
+++ b/examples/helloworld/test.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 		<title>FractalJS Test</title>
+		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	</head>
 	<body>
 		<div id="myRoot">
@@ -23,7 +24,7 @@
 					</div>
 				</div>
 			</div>
-		<script src="../../src/ObjectJS.js"></script>
+		<script src="../../objectjs-jquery.min.js"></script>
 		<script type="text/javascript">
 			ObjectJS.reqNameSpace('test.uis');
 			test.uis.Foo = function (view) {
